fixed mobile screen overflow

--- a/src/pages/About_Us.module.css
+++ b/src/pages/About_Us.module.css
@@ -1,22 +1,18 @@
 /* Container */
 
 .purpleLinesWrapper {
-  /* position: fixed; stays across all slides */
-  /* top: 0px; */
   position: absolute !important;
- transform: scale(0.9) ;
+ transform: scale(0.) ;
   left: -250px;
   transition: ease-in 1s;
-  /* display: flex; */
-  /* justify-content: center; */
-  /* height: 50%; */
   z-index: 0; /* ensures it's behind everything */
   pointer-events: none; /* doesn't block clicks */
 }
 .softwarePage {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: hidden !important;
+  position: relative;
 }
 .slidesContainer {
   display: flex;
